--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <title>The Movie DB</title>
+   </head>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
